version 1.2.0: (2012-02-26)

- support for multisample projects: distribute sample segmentation across workstations, compile results and plot CNVs across samples (see vignette for a reworked example)

- strand-aware read starts and duplicate read removal for counting reads from a BAM file in genomic ranges

- functions for generating background read depth and calculating GC content

