@@ -5,7 +5,7 @@ setClass("ExomeCopy",
                         path="Rle",
                         ranges="IRangesList",
                         O.norm="numeric",
-                        log.odds="numeric",
+                        log.odds="numeric",                       
                         fx.par="list",
                         init.par="list",
                         final.par="list",
