@@ -111,12 +111,14 @@ exomeCopy <- function(rdata, sample.name, X.names, Y.names, fit.var=FALSE, relto
   }
   if (!all(d %in% S)) {
     stop("The normal state, d, must be one of the possible copy states in S")
-  } else {
-    normal.state = which(S==d)
-  }
+  } 
   if (!(all(X.names %in% colnames(rdata)))) {
     stop("X.names must be variable names in rdata")
   }
+  if (nrow(rdata) < 100) {
+    warning("exomeCopy was tested for thousands of ranges covering a targeted region on a single chromosome.  The results might not be reliable for less than a hundred ranges.")
+  }
+  normal.state = which(S==d)
   X <- as.matrix(as.data.frame(values(rdata))[,X.names])
   colnames(X) <- X.names
   if (fit.var) {
@@ -154,7 +156,7 @@ exomeCopy <- function(rdata, sample.name, X.names, Y.names, fit.var=FALSE, relto
   A <- trFn(nm.fit$par[1:2],fx.par,data,nstates) 
   beta.hat <- nm.fit$par[3:(2+ncol(X.full))]
   names(beta.hat) <- colnames(X.full)
-  mu.hat <- X.full %*% beta.hat
+  mu.hat <- as.numeric(X.full %*% beta.hat)
   mu.hat[mu.hat < 1] <- 1
   if (!fit.var) {
     phi.hat <- exp(nm.fit$par[(3+ncol(X.full))])
@@ -163,13 +165,14 @@ exomeCopy <- function(rdata, sample.name, X.names, Y.names, fit.var=FALSE, relto
   } else {
     gamma.hat <- nm.fit$par[(3+ncol(X.full)):length(nm.fit$par)]
     names(gamma.hat) <- colnames(Y.full)
-    phi.hat <- Y.full %*% gamma.hat
+    phi.hat <- as.numeric(Y.full %*% gamma.hat)
     phi.hat[phi.hat < 1e-6] <- 1e-6
     type="exomeCopyVar"
   }
   path <- viterbiPath(nm.fit$par,fx.par,data,nstates,stFn,trFn,emFn)
   emit.probs <- emFn(nm.fit$par,fx.par,data,nstates)
   log.odds <- log(emit.probs[cbind(path,seq(path))]+1e-6) - log(emit.probs[normal.state,]+1e-6)
-  fit <- new("ExomeCopy",sample.name=sample.name,type=type,path=Rle(path),ranges=ranges(rdata),O.norm=as.numeric(O/mu.hat),log.odds=log.odds,fx.par=fx.par,init.par=init.par,final.par=list(goto.cnv=goto.cnv.hat,goto.normal=goto.normal.hat,beta=beta.hat,gamma=gamma.hat),counts=nm.fit$counts,convergence=nm.fit$convergence,nll=nm.fit$value) 
+  final.par <- list(goto.cnv=goto.cnv.hat,goto.normal=goto.normal.hat,beta=beta.hat,gamma=gamma.hat,phi=ifelse(fit.var,NULL,phi.hat))
+  fit <- new("ExomeCopy",sample.name=sample.name,type=type,path=Rle(path),ranges=ranges(rdata),O.norm=as.numeric(O/mu.hat),log.odds=log.odds,fx.par=fx.par,init.par=init.par,final.par=final.par,counts=nm.fit$counts,convergence=nm.fit$convergence,nll=nm.fit$value) 
   return(fit)
 }
