@@ -6,15 +6,19 @@
   CNV detection from exome sequencing read depth
 }
 \description{
-  Detection of copy number variants (CNV) from exome sequencing samples, including unpaired samples.  The package implements a hidden Markov model which uses positional covariates, such as background read depth and GC-content, to simultaneously normalize and segment the samples into regions of constant copy count.
+  Detection of copy number variants (CNV) from exome sequencing samples,
+  including unpaired samples.  The package implements a hidden Markov
+  model which uses positional covariates, such as background read depth
+  and GC-content, to simultaneously normalize and segment the samples
+  into regions of constant copy count.  
 }
 \details{
 
   \tabular{ll}{
     Package: \tab exomeCopy\cr
     Type: \tab Package\cr
-    Version: \tab 1.1.9\cr
-    Date: \tab 2012-03-09\cr
+    Version: \tab 1.1.10\cr
+    Date: \tab 2012-03-12\cr
     License: \tab GPL (>= 2)\cr
     LazyLoad: \tab yes\cr
     Imports: \tab BiocGenerics \cr
@@ -24,7 +28,14 @@
 
   exomeCopy fits a hidden Markov model to observed read counts using
   covariates.  It returns the Viterbi path, the most likely path of
-  hidden states, which is the predicted copy count at each window. 
+  hidden states, which is the predicted copy count at each window.
+
+  \code{exomeCopy} is designed to run on read counts from consecutive
+  genomic ranges on a single chromosome, as it tries to identify higher
+  or lower read depth relative to a baseline.  Please see the vignette
+  for an example of how to prepare input data for \code{exomeCopy}, how
+  to loop the function over multiple chromosomes and samples, and how to
+  extract the resulting predicted CNVs.  
 }
 \author{
   Michael Love <love@molgen.mpg.de>
